--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
   height: 100vh;
   background-color: #f0efef;
   font-family: 'Poppins', sans-serif;
+  -ms-overflow-style: none; /*hiding scroll bar*/
 }
 
 #root {
@@ -14,7 +15,6 @@ body {
 main {
   height: 100%;
   width: 100%;
-  overflow: hidden;
 }
 
 .nav-div{
@@ -28,9 +28,10 @@ main {
   left: 18%;
   width: 80%;
   height: 100%;
-  overflow-y: scroll;
-  padding-right: 20px;
-  box-sizing: content-box;
+}
+
+body::-webkit-scrollbar{
+  display: none; /*hiding scroll bar*/
 }
 
 form.nosubmit {
@@ -145,7 +146,13 @@ input.nosubmit:focus {
   background: linear-gradient(288deg, rgba(255, 231, 200, 1) 0%, rgba(250, 235, 215, 1) 100%);
 }
 
+.product-img{
+  width:40px
+}
 
+.product-title , .product-subtitle{
+  display: inline-block;
+}
 /* 228b22 */
 /* 
 aliceblue
